# python-mlboardclient

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  test_executor.py  test_optimization.py  test_optimizator.py  test_parallel.py  upload.sh
mlboardclient/: __init__.py  exceptions.py  tf_conf.py  utils.py
mlboardclient/api/: __init__.py  base.py  client.py  context.py  httpclient.py
mlboardclient/api/v2/: apps.py  client.py  datasets.py  executor.py  keys.py  optimizator.py  servings.py  tasks.py
mlboardclient/ml_serving_utils/: compat.py  dtypes.py  helpers.py  predict_pb2.py  predict_pb2_grpc.py  resource_handle_pb2.py  tensor_pb2.py  tensor_shape.py  tensor_shape_pb2.py  tensor_util.py  types_pb2.py
mlboardclient/report/: tensorflow_rpt.py  tensorlogs.py
