[metadata]
name = python-mlboardclient
summary = Ml-Board Client Library
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = KuberLab

[files]
packages =
    mlboardclient

[nosetests]
cover-package = mlboardclient

[pbr]
autodoc_index_modules = True
warnerrors = True

[bdist_wheel]
universal=1
